[project]
name = "task-tracker-cli"
version = "0.1.0"
description = "Um CLI para gerenciar tarefas (to-do list) baseado no desafio do roadmap.sh."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Manoel Cândido", email = "manoelcandidodev@gmail.com" }
]
keywords = ["cli", "task", "todo", "python"]

[project.scripts]
task-cli = "task_cli:main"
